Starting to develop my portfolio :D

--- a/Creación de AppWebs con Blazor/3.- Interacción con datos en Blazor AppWebs/Pages/Index.razor
+++ b/Creación de AppWebs con Blazor/3.- Interacción con datos en Blazor AppWebs/Pages/Index.razor
@@ -2,8 +2,9 @@
 
 <h3>HelloPizza</h3>
 
-<SurveyPrompt Title="Fine Pizza" SubTitle="However you like your pizzas, we can deliver them fast!" />
+<SurveyPrompt Title="@brandWords" SubTitle="@welcomeMessage" />
 
 @code {
-
+    private string brandWords = "Fine Pizza";
+    private string welcomeMessage = "However you like your pizzas, we can deliver them fast!";
 }
