--- a/Dotnet-Proj/Shared/ProjectDoor.razor
+++ b/Dotnet-Proj/Shared/ProjectDoor.razor
@@ -1,8 +1,13 @@
 <div class="DoorBox" >
-    <a href="@ProjectPage">
-        <img src="../images/@Image" alt="@Title" class="ProjDoorImg">
-        <h3>@Title</h3>
-        <p>@Description</p>
+    <a class="DoorContent" href="@ProjectPage">
+
+        <img src="../images/@Image" alt="@Title" class="Preview">
+        
+        <div class="DoorText" >
+            <h3>@Title</h3>
+            <p>@Description</p>
+        </div>
+        
     </a>
 </div>
 
