--- a/Dotnet-Proj/Shared/TopBar.razor
+++ b/Dotnet-Proj/Shared/TopBar.razor
@@ -1,7 +1,5 @@
 <div class="TopBar" >
-    <div class="home-btn" >
-        <a href="">Home</a>
-    </div>
+        <a class="home-btn" href="">Home</a>
     <nav class="Buttons" >
         <BarButton Title="Projects" RefPage="projects" />
         <BarButton Title="Contact" RefPage="contact" />
