A project is taking shape...

--- a/Dotnet-Proj/Shared/ProjectDoor.razor
+++ b/Dotnet-Proj/Shared/ProjectDoor.razor
@@ -4,8 +4,8 @@
         <img src="../images/@Image" alt="@Title" class="Preview">
         
         <div class="DoorText" >
-            <h3>@Title</h3>
-            <p>@Description</p>
+            <h3 class="title" >@Title</h3>
+            <p class="description" >@Description</p>
         </div>
         
     </a>
