--- a/Dotnet-Proj/Shared/ProjectDoor.razor.css
+++ b/Dotnet-Proj/Shared/ProjectDoor.razor.css
@@ -1,36 +1,56 @@
-.Preview {
-    max-width: 100px;
-    border-radius: 4px;
-    margin: 0 auto;
-    display: inline-block;
-    text-decoration: none;
-    text-align: center;
-}
-
 .DoorBox {
     text-decoration: none;
     display: inline-flex;
-    padding: 25px;
     background-color: grey;
     border-radius: 4px;;
     margin: 5px;
     align-items: center;
+    max-width: 217px;
 }
 
 .DoorContent {
-    display: flex;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    padding: 25px;
+    margin: 0 auto;
+    width: 200px;
+    height: 250px;
+    text-decoration: none;
+    overflow: hidden;
+
+}
+
+.DoorContent:hover{
+    background-color: darkgray;
+    border-radius: 4px;
+}
+
+.Preview {
+    width: 125px;
+    border-radius: 100%;
+    margin: 0 auto;
+    display: block;
+    text-decoration: none;
+    text-align: center;
 }
 
 .DoorText {
-    color:aliceblue;
-    margin: 4px;
+    color:rgb(255, 255, 255);
+    margin: 12px;
+    height: 50px;
     display: block;
-    border-style: solid;
-    border-width: 3px;
-    border-color: black;
-    padding: 8px;
     border-radius: 4px;
+    justify-content: center;;
+}
+
+.title {
+    font-size: 17px;
+    text-overflow: ellipsis;
+    display: inline;
+    width: 100px;
+    padding: 0 auto;
+}
+
+.description {
+    font-size: 12px;
+    display: block;
 }
