--- a/Dotnet-Proj/Shared/TopBar.razor.css
+++ b/Dotnet-Proj/Shared/TopBar.razor.css
@@ -1,25 +1,9 @@
-* {
-    box-sizing: border-box;
-}
-
-.home-btn {
-    color: aliceblue;
-    border: none;
-    background-color: blue;
-    margin: 0;
-    padding: 12px;
-    display: inline-block;
-}
-
 .TopBar {
     border: none;
     margin: 0;
     padding: 0;
     background-color: #708090;
-    display: flexbox;
-    flex-direction: row;
-
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
@@ -28,12 +12,18 @@
     
 }
 
-.BarButton {
-    margin: 0;
-    display: inline-block;
-    background-color: antiquewhite;
-    padding: 15px;
+.home-btn {
+    text-decoration: none;
+    color: black;
     border: none;
+    margin: 0;
+    padding: 13px;
+    display: inline-block;
+    float: left;
+}
+
+.home-btn:hover {
+    background-color: #f0f8ff;
 }
 
 .Buttons {
